--- a/packages/tldraw/package.json
+++ b/packages/tldraw/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "^1.0.0",
+    "@radix-ui/react-progress": "^1.0.1",
     "@radix-ui/react-toggle-group": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@stitches/react": "^1.2.8",
@@ -59,6 +60,7 @@
     "react-error-boundary": "^3.1.4",
     "react-hotkeys-hook": "^3.4.7",
     "react-intl": "^6.1.1",
+    "socket.io-client": "^4.6.0",
     "tslib": "^2.4.0",
     "zustand": "^4.1.1"
   },
