change assets prefix

--- a/apps/www/public/manifest.json
+++ b/apps/www/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "tldraw",
-  "short_name": "tldraw",
+  "name": "tldream",
+  "short_name": "tldream",
   "icons": [
     {
       "src": "/android-chrome-512x512.png",
