--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -2,7 +2,6 @@
   "name": "@tldraw/www",
   "version": "1.8.0",
   "private": true,
-  "proxy": "http://127.0.0.1:4242",
   "description": "A tiny little drawing app (site).",
   "repository": {
     "type": "git",
@@ -11,7 +10,7 @@
   "license": "MIT",
   "author": "@steveruizok",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NEXT_PUBLIC_DIFFUSION_API_URL=http://127.0.0.1:4242 next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
